# rustchain-bounties

./: .env.example  .gitignore  BOUNTY-2296-REPLAY-ANALYSIS.md  CODE_REVIEW_2314.md  Cargo.toml  README.md  SECURITY-2246.md  SECURITY-FIX-2246.md  SUBMISSION-CHECKLIST.md  SUBMISSION.md  agent_vis.py  batch-scheduler.py  beacon_atlas_fix.py  blog-getting-started.md  bounty-2246.py  bounty-2259.md  bounty-2259.py  bounty-2261.py  bounty-2265.py  collab_feat.py  config_generator.py  cvpr-2026.md  exotic_mining.md  explorer-integration.py  faucet-rate-limit-fix.py  faucet_security.py  faucet_security_fix.py  footer-stats-fix.py  fossil_viz.md  ggml-numa-shard.h  human_eval.md  keyboard-shortcuts.js  main.c  miner_dashboard.html  mining_video_guide.md  n64_llm.md  n64_llm_speedrun.md  n64_mining_rom.md  numa_power8.md  numa_power8_2.md  (+15 more)
1105-watch-videos/: WATCH_PROOF.md
1154-agent-reel/: RESUME_REEL.md
1584-human-referral/: REFERRAL_PROOF.md
1588-type-hints/: README.md
1589-unit-test/: test_sample.py
1591-github-actions/: README.md
1592-awesome-list/: SUBMISSION.md
1593-i18n-errors/: README.md
1593-i18n-translation/: README.md  translations_zh.json
1595-star-elyan/: STAR_PROOF.md
1597-telegram-bot/: README.md
1599-dockerfile/: README.md
1601-rust-miner/: Cargo.toml  README.md
1602-mcp-tool/: mcp_tool.py
1606-cli-monitor/: README.md  monitor.py
1607-chrome-ext/: popup.html  popup.js
1612-homebrew-formula/: rustchain-miner.rb
1613-dependabot/: README.md
rust-miner-port/: Cargo.toml  README.md
rust-miner-port/src/: main.rs
src/: commands.rs  (+1 more)
(+68 files in other folders)
